add kernels methods

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -10,3 +10,14 @@
   pages =    {4722},
   doi =      {10.21105/joss.04722}
 }
+
+@article{lynn2002neutron,
+  title={Neutron Doppler broadening studies of tantalum and tungsten metal},
+  author={J. E. Lynn and W. J. Trela and K. Meggers},
+  journal={Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  volume={192},
+  number={3},
+  pages={318--330},
+  year={2002},
+  publisher={Elsevier}
+}
