add raw version of script

--- a/docs/source/notebooks/ex1.ipynb
+++ b/docs/source/notebooks/ex1.ipynb
@@ -21,7 +21,7 @@
     "$[0, 1]$. The problem is solved seperately with $R$ taken as isotropic\n",
     "and anisotropic TV regularization\n",
     "\n",
-    "The solution via PGM is based on the approach in <cite data-cite=\"beck-2009-tv\"/>,\n",
+    "The solution via PGM is based on the approach in,\n",
     "which involves constructing a dual for the constrained denoising problem.\n",
     "The PGM solution minimizes the resulting dual. In this case, switching\n",
     "between the two regularizers corresponds to switching between two\n",
