--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -21,3 +21,11 @@
   year={2002},
   publisher={Elsevier}
 }
+
+@article{conlin2018release,
+  title={Release of ENDF/B-VIII. 0-based ACE data files},
+  author={J. L. Conlin and W. Haeck and D. Neudecker and others},
+  journal={LA-UR-18-24034},
+  year={2018},
+  publisher={Los Alamos National Laboratory}
+}
