add resolution example

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -29,3 +29,11 @@
   year={2018},
   publisher={Los Alamos National Laboratory}
 }
+
+
+@article{balke2023trinidi,
+  title={TRINIDI: Time-of-Flight Resonance Imaging with Neutrons for Isotopic Density Inferenc},
+  author={Balke, Thilo and Long, Alexander M and Vogel, Sven C and Wohlberg, Brendt and Bouman, Charles A},
+  journal={arXiv preprint arXiv:2302.12577},
+  year={2023}
+}
