Add resolution example (#3)
* initial rtd

* modify title

* add arxiv ref

* fix link

* add ref to docs

* init

* test file

* add some docs

* add template

* save

* s quickstart

* back

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* add pre-commit

* add citation

* fix link

* safe

* fix api

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* save

* various

* logos

* favicon

* fix pre-commit path

* fix typo

* capitalize

* add util

* typos

* add kernels methods

* add script

* updata data

* update submodule

* submodule url

* add xsdata

* various improvements cross_section

* xs plotting

* rename to t_F

* add XSDict class

* xs class

* various changes including ProjectionRegion class

* fix syntax

* small updates

* average spectra

* add t_A, t_F handling to R

* save

* save

* modify notebook

* add raw version of script

* change file names

* add api ref

* add operators and losses

* save

* add parameters class

* add Z reconstructor

* modify plotting

* update logo

* add projection_transform functionality

* add time calibration script

* fix table

* add cross_section notebook

* update data

* rename

* update data

* add plots

* updata data

* save

* add crop

* add new cross section script

* add recon script

* rtd theme

* fac theme

* pygments_style def

* fix version

* ipython

* ipython extensions

* remove ipython

* add ipython

* unpeg verson

* move stuff to simulate

* remove idir

* remove iphl

* update nb

* add exts

* unb

* save

* save

* add ch

* sa

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -21,3 +21,19 @@
   year={2002},
   publisher={Elsevier}
 }
+
+@article{conlin2018release,
+  title={Release of ENDF/B-VIII. 0-based ACE data files},
+  author={J. L. Conlin and W. Haeck and D. Neudecker and others},
+  journal={LA-UR-18-24034},
+  year={2018},
+  publisher={Los Alamos National Laboratory}
+}
+
+
+@article{balke2023trinidi,
+  title={TRINIDI: Time-of-Flight Resonance Imaging with Neutrons for Isotopic Density Inferenc},
+  author={Balke, Thilo and Long, Alexander M and Vogel, Sven C and Wohlberg, Brendt and Bouman, Charles A},
+  journal={arXiv preprint arXiv:2302.12577},
+  year={2023}
+}
