Some docs improvements

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -1,39 +1,45 @@
-@Article {balke-2022-scico,
-  author =   {Thilo Balke and Fernando Davis and Cristina
+@Article {balke2022scico,
+  author =	 {Thilo Balke and Fernando Davis and Cristina
                   Garcia-Cardona and Soumendu Majee and Michael McCann
                   and Luke Pfister and Brendt Wohlberg},
-  title =    {Scientific Computational Imaging Code ({SCICO})},
-  journal =  {Journal of Open Source Software},
-  year =     {2022},
-  volume =   {7},
-  number =   {78},
-  pages =    {4722},
-  doi =      {10.21105/joss.04722}
+  title =	 {Scientific Computational Imaging Code ({SCICO})},
+  journal =	 {Journal of Open Source Software},
+  year =	 2022,
+  volume =	 7,
+  number =	 78,
+  pages =	 4722,
+  doi =		 {10.21105/joss.04722}
 }
 
-@article{lynn2002neutron,
-  title={Neutron Doppler broadening studies of tantalum and tungsten metal},
-  author={J. E. Lynn and W. J. Trela and K. Meggers},
-  journal={Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
-  volume={192},
-  number={3},
-  pages={318--330},
-  year={2002},
-  publisher={Elsevier}
+@Article {balke2023trinidi,
+  title =	 {{TRINIDI}: Time-of-Flight Resonance Imaging with
+                  Neutrons for Isotopic Density Inferenc},
+  author =	 {Balke, Thilo and Long, Alexander M. and Vogel, Sven
+                  C. and Wohlberg, Brendt and Bouman, Charles A.},
+  journal =	 {arXiv preprint arXiv:2302.12577},
+  year =	 2023,
+  doi =          {10.48550/arXiv.2302.12577}
 }
 
-@article{conlin2018release,
-  title={Release of ENDF/B-VIII. 0-based ACE data files},
-  author={J. L. Conlin and W. Haeck and D. Neudecker and others},
-  journal={LA-UR-18-24034},
-  year={2018},
-  publisher={Los Alamos National Laboratory}
+@Article {conlin2018release,
+  title =	 {Release of {ENDF/B-VIII.} 0-based {ACE} data files},
+  author =	 {J. L. Conlin and W. Haeck and D. Neudecker and
+                  others},
+  journal =	 {LA-UR-18-24034},
+  year =	 2018,
+  publisher =	 {Los Alamos National Laboratory}
 }
 
-
-@article{balke2023trinidi,
-  title={TRINIDI: Time-of-Flight Resonance Imaging with Neutrons for Isotopic Density Inferenc},
-  author={Balke, Thilo and Long, Alexander M and Vogel, Sven C and Wohlberg, Brendt and Bouman, Charles A},
-  journal={arXiv preprint arXiv:2302.12577},
-  year={2023}
+@Article {lynn2002neutron,
+  title =	 {Neutron Doppler broadening studies of tantalum and
+                  tungsten metal},
+  author =	 {J. E. Lynn and W. J. Trela and K. Meggers},
+  journal =	 {Nuclear Instruments and Methods in Physics Research
+                  Section B: Beam Interactions with Materials and
+                  Atoms},
+  volume =	 192,
+  number =	 3,
+  pages =	 {318--330},
+  year =	 2002,
+  doi =          {10.1016/S0168-583X(02)00480-9}
 }
